SIMPLEX-180 Add concept change-report endpoint.